collector/public/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
@import url("https://fonts.googleapis.com/css?family=Rubik");

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

.fade-enter-active {
  transition: opacity 1s ease-in-out;
}

.fade-enter-to {
  opacity: 1;
}

.fade-enter {
  opacity: 0;
}

#app {
  height: 100vh;
  padding: 2em;
  background-color: #0f1217;
}

.red {
  color: #ff4757 !important;
}

.green {
  color: #2fd86d !important;
}

.redbg {
  background-color: #ff4757;
}

.greenbg {
  background-color: #2fd86d;
}

.header {
  font-family: "Rubik";
  font-weight: 600;
  padding-bottom: 1em;
  font-size: 24px;
  color: #ffffff;
  letter-spacing: 0.2px;
}

.header span {
  vertical-align: super;
}

.nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 4em;
  align-items: center;
}

.nav .status {
  font-family: Rubik-Regular;
  font-size: 16px;
  color: #ffffff;
  text-align: left;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.nav .status .beep {
  height: 6px;
  width: 6px;
  margin-right: 0.5em;
  border-radius: 100%;
}

.info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#vis {
  margin-bottom: 2em;
}

.body {
  font-family: "Rubik";
  font-size: 48px;
  color: #78ddeb;
  letter-spacing: 0.4px;
}

.loader {
  display: inline;
}

.car__body {
  animation: shake 0.3s ease-in-out infinite alternate;
}

.car__line {
  transform-origin: center right;
  stroke-dasharray: 22;
  animation: line 0.8s ease-in-out infinite;
  animation-fill-mode: both;
}

.car__line--top {
  animation-delay: 0s;
}

.car__line--middle {
  animation-delay: 0.3s;
}

.car__line--bottom {
  animation-delay: 0.4s;
}

.empty {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 1em;
}

.empty>h1 {
  font-family: 'Rubik';
  font-weight: 300!important;
  font-size: 48px;
  margin-top: 2em;
  color: rgba(255, 255, 255, 0.50);
  letter-spacing: 0.4px;
  text-align: center;
}

@keyframes shake {
  0% {
    transform: translateY(-1%);
  }

  100% {
    transform: translateY(3%);
  }
}

@keyframes line {
  0% {
    stroke-dashoffset: 22;
  }

  25% {
    stroke-dashoffset: 22;
  }

  50% {
    stroke-dashoffset: 0;
  }

  51% {
    stroke-dashoffset: 0;
  }

  80% {
    stroke-dashoffset: -22;
  }

  100% {
    stroke-dashoffset: -22;
  }
}

/*# sourceMappingURL=style.css.map */

